// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractParametersFromSecuritySchemes should fail with unsupported API scheme source 1`] = `
{
  "errorCode": "E_UNSUPPORTED_API_KEY_SOURCE",
  "errorParams": [
    "cookie",
    "access_token",
  ],
}
`;

exports[`extractParametersFromSecuritySchemes should fail with unsupported security scheme 1`] = `
{
  "errorCode": "E_UNSUPPORTED_HTTP_SCHEME",
  "errorParams": [
    "mutual",
  ],
}
`;

exports[`extractParametersFromSecuritySchemes should work with OAuth security scheme 1`] = `
[
  {
    "in": "header",
    "name": "authorization",
    "schema": {
      "pattern": "((b|B)earer) .*",
      "type": "string",
    },
  },
  {
    "in": "query",
    "name": "access_token",
    "schema": {
      "type": "string",
    },
  },
]
`;

exports[`extractParametersFromSecuritySchemes should work with OpenId security scheme 1`] = `
[
  {
    "in": "header",
    "name": "authorization",
    "schema": {
      "pattern": "((b|B)earer) .*",
      "type": "string",
    },
  },
  {
    "in": "query",
    "name": "access_token",
    "schema": {
      "type": "string",
    },
  },
]
`;

exports[`extractParametersFromSecuritySchemes should work with apiKey in header security scheme 1`] = `
[
  {
    "in": "header",
    "name": "yolo",
    "schema": {
      "type": "string",
    },
  },
]
`;

exports[`extractParametersFromSecuritySchemes should work with apiKey in query security scheme 1`] = `
[
  {
    "in": "query",
    "name": "yolo",
    "schema": {
      "type": "string",
    },
  },
]
`;

exports[`extractParametersFromSecuritySchemes should work with header overlapping security schemes 1`] = `
[
  {
    "in": "header",
    "name": "authorization",
    "schema": {
      "type": "string",
    },
  },
  {
    "in": "query",
    "name": "access_token",
    "schema": {
      "type": "string",
    },
  },
]
`;

exports[`extractParametersFromSecuritySchemes should work with nested security scheme 1`] = `
[
  {
    "in": "header",
    "name": "authorization",
    "schema": {
      "type": "string",
    },
  },
  {
    "in": "header",
    "name": "yolo",
    "schema": {
      "type": "string",
    },
  },
  {
    "in": "query",
    "name": "yolo",
    "schema": {
      "type": "string",
    },
  },
  {
    "in": "query",
    "name": "access_token",
    "schema": {
      "type": "string",
    },
  },
]
`;

exports[`extractParametersFromSecuritySchemes should work with no security scheme 1`] = `[]`;

exports[`extractParametersFromSecuritySchemes should work with query overlapping security schemes 1`] = `
[
  {
    "in": "query",
    "name": "access_token",
    "schema": {
      "type": "string",
    },
  },
  {
    "in": "header",
    "name": "authorization",
    "schema": {
      "pattern": "((b|B)earer) .*",
      "type": "string",
    },
  },
]
`;
